nginx/php/word working

--- a/nginx/srcs/default.conf
+++ b/nginx/srcs/default.conf
@@ -5,6 +5,7 @@ server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
 
+	server_name nginx;
 	return 301 https://$host$request_uri;
 }
 
@@ -17,7 +18,8 @@ server {
 
 	root /home/www;
 	autoindex on;
-	server_name localhost;
+	server_name nginx;
+	index index.php index.html;
 	location / {
 		try_files $uri $uri/ =404;
 	}
