--- a/phpmyadmin/srcs/default.conf
+++ b/phpmyadmin/srcs/default.conf
@@ -2,7 +2,7 @@ server {
 	listen 5000 default_server;
 	listen [::]:5000 default_server;
 	
-	index			index.php index.html;
+	index			index.php;
 	root			/home/www/;
 
 	location ~ \.php$ {
