--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,10 +1,12 @@
-FROM 		alpine:3.8
+FROM 		alpine:3.12
 
 WORKDIR 	/home
-COPY 		srcs/default.conf 	/etc/nginx/
-COPY 		srcs/setup.sh 		/home/
+COPY 		srcs/default.conf 	    /etc/nginx/
+COPY        srcs/telegraf.conf      /home/
+COPY        srcs/supervisord.conf   /etc/
 RUN			apk update
-RUN 		apk add openrc nginx openssl
+RUN 		apk add openrc nginx openssl openssh && apk add --no-cache supervisor
+RUN         rc-update add sshd
 RUN 		openrc reboot
 RUN 		adduser -S -g 'Nginx www user' -h /home/www/ sboof
 RUN 		mkdir /etc/ssl/nginx
@@ -12,7 +14,10 @@ RUN 		openssl req -nodes -new -x509 -keyout /etc/ssl/nginx/nginx.key -out /etc/s
 RUN 		mkdir /run/nginx
 RUN 		cp /etc/nginx/default.conf /etc/nginx/conf.d/
 RUN 		echo "sboof was here !!!" > /home/www/index.html
-#RUN 		/etc/init.d/nginx restart
+
+#setup telegraf
+RUN         wget https://dl.influxdata.com/telegraf/releases/telegraf-1.16.2_linux_amd64.tar.gz
+RUN         tar xf telegraf-1.16.2_linux_amd64.tar.gz
 
 EXPOSE 		80 					443
-CMD 		sh					/home/setup.sh
+CMD         /usr/bin/supervisord -c /etc/supervisord.conf
