--- a/yaml/influxDB.yaml
+++ b/yaml/influxDB.yaml
@@ -1,17 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-      metallb.universe.tf/allow-shared-ip: shared
   name: influxdb
 spec:
   selector:
     app: influxdb
   ports:
-  - port: 8086
-    name: influxdb
-    targetPort: 8086
-  type: LoadBalancer
+    - protocol: TCP
+      port: 8086
+      targetPort: 8086
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: influxdb
+  labels:
+    app: influxdb
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -32,4 +42,11 @@ spec:
         image: influxdb
         imagePullPolicy: Never
         ports:
-        - containerPort: 8086
+          - containerPort: 8086
+        volumeMounts:
+          - mountPath: "/var/lib/influxdb"
+            name: influxdb
+      volumes:
+        - name: influxdb
+          persistentVolumeClaim:
+            claimName: influxdb
