--- a/nginx/srcs/default.conf
+++ b/nginx/srcs/default.conf
@@ -23,4 +23,12 @@ server {
 	location / {
 		try_files $uri $uri/ =404;
 	}
+	location /wordpress {
+		return 307 http://192.168.99.250:5050;
+	}
+	location /phpmyadmin/ {
+		proxy_set_header X-Forwarded-Proto https;
+		proxy_pass http://192.168.99.250:5000/;
+		proxy_redirect https://$host/ https://$host/phpmyadmin/;
+	}
 }
